@@ -34,12 +34,7 @@ public class Controller extends UnicastRemoteObject implements RemoteController 
     private final Map<Integer, ProcessingState> processingStates;
     private final Map<Integer, ProcessingInfo> processingInfos;
     private final WorkDistributor workDistributor = new WorkDistributor();
-    private final ExecutorService executor = Executors.newFixedThreadPool(1,
-            r -> {
-                Thread t = new Thread(r);
-                t.setPriority(Thread.MAX_PRIORITY);
-                return t;
-            });
+    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     private final ScheduledExecutorService healthCheckExecutor = Executors.newSingleThreadScheduledExecutor(
             r -> {
                 Thread t = new Thread(r);
